--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@solana/web3.js": "^1.95.2",
+    "axios": "^1.7.5",
     "bip39": "^3.1.0",
     "bootstrap": "^5.3.3",
     "ed25519-hd-key": "^1.3.0",
